--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Roboto', sans-serif;
-    color: #2E2F42;
-    background-color: #FFF;
+    color: #434455;
+    background-color: #FFFFFF;
 }
 
 button {
@@ -17,11 +17,13 @@ button {
 }
 
 .logotype {
-font-family: Raleway;
+font-family: 'Raleway', sans-serif;
 font-size: 18px;
 font-weight: 700;
-line-height: 1.16;
+line-height: 1.17;
 letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #4d5ae5;
 }
 
 .iris-logo {
