--- a/css/styles.css
+++ b/css/styles.css
@@ -17,9 +17,9 @@ button {
 }
 
 .logotype {
-font-family: 'Raleway', sans-serif;
-font-size: 18px;
+font-family: "Raleway", sans-serif;
 font-weight: 700;
+font-size: 18px;
 line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
@@ -27,7 +27,7 @@ color: #4d5ae5;
 }
 
 .logo {
-    color:#4D5AE5;
+    color:#2e2f42 ;
 }
 
 .page-nav {
