--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,14 @@ body {
     background-color: #FFFFFF;
 }
 
+.text-decoration {
+    text-decoration: none;
+}
+
+.list {
+    list-style-type: none;
+}
+
 .main-logotype {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -52,4 +60,86 @@ color: #434455;
 
 .page-adress .page-contacts:active {
     color: #404bbf;
+}
+
+.first-section {
+    background-color: #2E2F42;
+}
+
+.first-section .main-title {
+text-align: center;
+font-size: 56px;
+font-weight: 700;
+line-height: 1.07;
+letter-spacing: 0.02em;
+color: #FFFFFF;
+}
+
+.first-section .button {
+background-color: #4D5AE5;
+font-family: "Roboto", sans-serif;    
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #FFFFFF;
+cursor: pointer;
+}
+
+.first-section .button:hover {
+    background-color: #404BBF;
+}
+
+.first-section .button:active {
+    background-color: #404BBF;
+}
+
+.first-list-title {
+font-size: 20px;
+font-weight: 500;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2E2F42;
+}
+
+.page-list-item {
+font-size: 16px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
+}
+
+.three-section {
+    background-color: #F4F4FD
+}
+
+.page-our-team-portfolio {
+text-align: center;
+font-size: 36px;
+font-weight: 700;
+line-height: 1.11;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+color: #2E2F42;
+}
+
+.page-list {
+    background-color: #FFFFFF;
+}
+
+.page-footer {
+    background-color: #2e2f42;
+}
+
+.second-accent {
+    color: #f4f4fd;
+}
+
+.footer-paragraph {
+font-size: 16px;
+font-weight: 400;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #F4F4FD;
 }
